--- a/Grand.Web/Views/Shared/_GiftCardBox.cshtml
+++ b/Grand.Web/Views/Shared/_GiftCardBox.cshtml
@@ -2,9 +2,11 @@
 @if (Model.Display)
 {
     <div class="giftcard-box">
-        <div class="title">
-            <strong>@T("ShoppingCart.GiftCardCouponCode")</strong>
-        </div>
+        <h2 class="h5">
+            <strong>
+                @T("ShoppingCart.GiftCardCouponCode")
+            </strong>
+        </h2>
         <div class="coupon-code">
             <div class="form-group">
                 <span class="col-form-label">@T("ShoppingCart.GiftCardCouponCode.Tooltip")</span>
