--- a/Grand.Web/Views/Checkout/Completed.cshtml
+++ b/Grand.Web/Views/Checkout/Completed.cshtml
@@ -14,9 +14,9 @@
     <div class="checkout-data">
         @await Component.InvokeAsync("Widget", new { widgetZone = "checkout_completed_top", additionalData = Model.OrderId })
         <div class="card order-completed text-center">
-            <div class="alert-success alert text-success text-center mx-3 mb-0"><strong>@T("Checkout.YourOrderHasBeenSuccessfullyProcessed")</strong></div>
+            <div class="alert-success alert text-success text-center mb-0"><strong>@T("Checkout.YourOrderHasBeenSuccessfullyProcessed")</strong></div>
             <div class="card-body pt-0 text-center">
-                <div class="order-number generalMarginSupporter text-center">
+                <div class="order-number generalMarginSupporter text-center mt-3 mb-3">
                     <strong>@T("Checkout.OrderNumber"): @Model.OrderNumber</strong>
                 </div>
                 <div class="buttons text-center">
