--- a/Grand.Web/Views/Product/ProductTemplate.Simple.cshtml
+++ b/Grand.Web/Views/Product/ProductTemplate.Simple.cshtml
@@ -42,7 +42,7 @@
 <!--product breadcrumb-->
 @section Breadcrumb
 {
-    <partial name="_ProductBreadcrumb" model="Model.Breadcrumb" />
+    @*<partial name="_ProductBreadcrumb" model="Model.Breadcrumb" />*@
 }
 
 @await Component.InvokeAsync("Widget", new { widgetZone = "productdetails_after_breadcrumb", additionalData = Model.Id })
