--- a/Grand.Web/Views/Product/_ReservationInfo.cshtml
+++ b/Grand.Web/Views/Product/_ReservationInfo.cshtml
@@ -6,7 +6,7 @@
     Html.AppendScriptParts(ResourceLocation.Footer, "~/scripts/public.reservation.js");
     Html.AddCssFileParts("~/content/jquery-ui-themes/smoothness/jquery-ui.calendar.min.css");
 }
-    <div style="margin-top:10px">
+    <div>
         @if (Model.Parameters.Any())
         {
             <div class="container" style="margin-left:-15px">
@@ -22,9 +22,7 @@
 
         @if (Model.IntervalUnit == IntervalUnit.Day)
         {
-            <div style="position: relative;">
-                <h5>@T("Products.Reservation.Date")</h5>
-
+            <div style="position: relative;" class="reservation-calendar">
                 <div id="reservationDatepickerRange_@Model.Id">
                     <div id="reservationDatepickerRangeStart_@Model.Id"></div>
                     <div id="reservationDatepickerRangeEnd_@Model.Id"></div>
@@ -99,6 +97,12 @@ else
             startDatePicker.css('display', 'none');
 
             endDatePicker.on('changeMonth', function (e) {
+                var startDate = startDatePicker.bootstrapDatepicker('getDate');
+                var endDate = endDatePicker.bootstrapDatepicker('getDate');
+
+                console.log(startDate);
+                console.log(endDate);
+
                 var d = e.date;
 
                 if (d) {
@@ -122,10 +126,8 @@ else
                         }
 
                         startDatePicker.bootstrapDatepicker('setDatesDisabled', data);
-                        startDatePicker.bootstrapDatepicker('_setDate', d, 'view');
-
                         endDatePicker.bootstrapDatepicker('setDatesDisabled', data);
-                        endDatePicker.bootstrapDatepicker('_setDate', d, 'view');
+
 
                     }).fail(function () {
 
