--- a/Grand.Web/Themes/VeganHouse/Content/css/style.css
+++ b/Grand.Web/Themes/VeganHouse/Content/css/style.css
@@ -1,7 +1,31 @@
-﻿/** Global */
+﻿/** Pages by system name */
+.topic img {
+    visibility: hidden;
+}
+
+.topic.topic-aboutplace,
+.topic.topic-gallery,
+.topic.topic-route,
+.topic.topic-surroundings,
+.topic.topic-application {
+    max-width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.topic-header-image {
+    max-height: 900px;
+    overflow-y: hidden;
+}
+
+/** Global */
 * {
     font-family: Tahoma;
     border-radius: 0px !important;
+}
+
+.img-popup-gallery img {
+    cursor: pointer;
 }
 
 html, body {
@@ -115,13 +139,25 @@ select option:hover {
     color: #FFFFFF;
 }
 
+img.img-popup {
+    cursor: pointer;
+}
 
-.generalTitle, .page-title h1, h2.h5, h2.h5 > * {
+
+.generalTitle, .page-title h1, h2, h2.h5, h2.h5 > * {
     font-family: Georgia,Times,Times New Roman,serif !important;
     font-weight: 300;
     line-height: 1.2;
     margin-bottom: 20px;
     font-size: 36px;
+}
+
+h3 {
+    font-family: Georgia,Times,Times New Roman,serif !important;
+    font-weight: 300;
+    line-height: 1.2;
+    font-size: 24px;
+    margin-bottom: 10px;
 }
 
 .block-navigation ul.list {
@@ -168,7 +204,7 @@ ul.info li.title:first-child {
     box-shadow: 0 0 0 .2rem rgba(145, 226, 204, 0.23) !important;
 }
 
-#bar-notification {
+#bar-notification, .eu-cookie-bar-notification {
     position: fixed;
     border: 1px solid #123135;
     z-index: 10000;
@@ -177,11 +213,15 @@ ul.info li.title:first-child {
     background-color: #2c7d76;
 }
 
+.eu-cookie-bar-notification {
+    padding: 20px;
+}
+
 #bar-notification .close {
     text-align: right;
 }
 
-#bar-notification p {
+#bar-notification p, .eu-cookie-bar-notification p {
     color: #FFFFFF;
     text-align: center;
     padding-top: 20px;
@@ -551,6 +591,7 @@ main .page-container a:hover, main .page-container a:active {
     .shopping-cart .unit-price del {
         font-size: 18px;
         margin-left: 3px;
+        white-space: nowrap;
     }
 
     .shopping-cart .remove-from-cart .remove {
@@ -886,6 +927,21 @@ select.form-control:not([size]):not([multiple]) option {
     border-bottom: 0;
     border-top: 0;
 }
+
+/** FAQ */
+div.faq {
+    margin-top: 40px;
+}
+
+div.faq:first-child {
+    margin-top: 0px;
+}
+
+div.faq p {
+    border-left: 1px solid #2c7d76;
+    padding-left: 20px;
+}
+
 
 /** Animate.css enhancements */
 @keyframes bounce-with-delay {
