--- a/Grand.Web/Themes/VeganHouse/Views/Shared/_Root.cshtml
+++ b/Grand.Web/Themes/VeganHouse/Views/Shared/_Root.cshtml
@@ -8,7 +8,7 @@
 <main role="main">
     <partial name="Header" />
 
-    <div class="container page-container">
+    <div class="container page-container @Html.GrandPageCssClasses(includeClassElement: false)">
         @await Component.InvokeAsync("Widget", new { widgetZone = "content_before" })
         @if (IsSectionDefined("Breadcrumb"))
         {
