--- a/Grand.Web/Views/Product/_ProductPrice.cshtml
+++ b/Grand.Web/Views/Product/_ProductPrice.cshtml
@@ -95,12 +95,12 @@
         if (!String.IsNullOrWhiteSpace(Model.PriceWithDiscount))
         {
             @*discounted price*@
-            <div class="d-inline-flex align-items-center product-price discounted-price col-12">
+            @*<div class="d-inline-flex align-items-center product-price discounted-price col-12">
                 <label class="mb-0 mr-2">@T("Products.Price.WithDiscount"):</label>
                 <span itemprop="price" content="@Model.PriceValue.ToString("0.00", System.Globalization.CultureInfo.InvariantCulture)" class="your-price price-value-@(Model.ProductId)">
                     <strong>@Html.Raw(Model.PriceWithDiscount)</strong>
                 </span>
-            </div>
+            </div>*@
         }
         if (!String.IsNullOrEmpty(Model.BasePricePAngV))
         {
