--- a/Grand.Web/Views/Shared/Header.cshtml
+++ b/Grand.Web/Views/Shared/Header.cshtml
@@ -1,4 +1,4 @@
-﻿<header role="presentation" class="sticky-top">
+﻿<header role="presentation">
     <div class="row">
         <div class="container d-flex h-100 justify-content-center order-1 col-12 order-xl-0 col-xl-2" id="mainLogo">
                 @await Component.InvokeAsync("Logo")
